# ot-harjoitustyo

./: README.md
dokumentaatio/: changelog.md  monopoli.md  tyoaikakirjanpito.txt  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
train-simulator/: .coveragerc  .env  .gitignore  TrainSimulator  pyproject.toml  tasks.py
train-simulator/data/: .~lock.test_results.csv#  TrainSimulator.db  bottlenecks.csv  stop_coordinates.csv  stops.csv  test_results.csv  track.csv
train-simulator/dokumentaatio/: arkkitehtuuri.md  changelog.md  kaytto-ohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
train-simulator/src/: config.py  database_connection.py  index.py  initialize_database.py
train-simulator/src/entities/: bottleneck.py  track.py  train.py
train-simulator/src/repositories/: initialize_database.py  results.py  saving.py  track_repository.py
train-simulator/src/simulator/: simulate.py  simulator.py
train-simulator/src/tests/: conftest.py  database_test.py  saving_test.py  track_repository_test.py  track_test.py  train_test.py
train-simulator/src/ui/: game_loop.py  level.py  menu.py  run_ui.py  static_sprites.py  testmenu.py  ui.py
