[tool.poetry]
name = "train-simulator"
version = "0.1.0"
description = ""
authors = ["Samperius <samuli.kinnunen@gmail.com>"]
readme = "README.md"
packages = [{include = "train_simulator"}]

[tool.poetry.dependencies]
python = "^3.8"
simpy = "^4.0.1"
numpy = "^1.24.2"
tk = "^0.1.0"
invoke = "^2.0.0"
pygame = "^2.3.0"
pyyaml = "^6.0"
lark = "^1.1.5"
pandas = "^2.0.0"



[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pylint = "^2.17.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
